fix: add required property to input

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header class="header">
       <form id="search-form" class="search-form">
-        <input id="search-input" placeholder="Search..." type="text" class="search-input" />
+        <input required id="search-input" placeholder="Search..." type="text" class="search-input" />
       </form>
     </header>
     <main id="movies-container" class="main">
